--- a/templates/default/deflate_extra.conf.erb
+++ b/templates/default/deflate_extra.conf.erb
@@ -1,5 +1,6 @@
 <IfModule mod_deflate.c>
   <IfModule mod_filter.c>
      AddOutputFilterByType DEFLATE application/json
+     AddOutputFilterByType DEFLATE text/csv
   </IfModule>
 </IfModule>
